src/objects/Apttus_Config2__AssetLineItemHistory__c.object
<CustomObject>
    <description>Represents a product or service asset line item.history</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Line Item History (Sold To)</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowedActions__c</fullName>
        <description>List of actions that are allowed for the asset line item record. One or more of the pick list values can be selected. When none of the values are selected it is considered as all actions are allowed. The custom settings named Hide Asset Actions overrides the actions listed here.</description>
        <label>Allowed Actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increment</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetARR__c</fullName>
        <description>The average annual recurring revenue from the asset over its lifetime.</description>
        <inlineHelpText>The average annual recurring revenue from the asset over its lifetime.</inlineHelpText>
        <label>Asset ARR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetAttributeValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute value</description>
        <inlineHelpText>ID of the associated product attribute value</inlineHelpText>
        <label>Attribute Value</label>
        <referenceTo>Apttus_Config2__AssetAttributeValueHistory__c</referenceTo>
        <relationshipLabel>Asset Line Items</relationshipLabel>
        <relationshipName>AssetLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetCode__c</fullName>
        <description>The asset code</description>
        <label>Asset Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item</description>
        <inlineHelpText>ID of the associated asset line item</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetMRR__c</fullName>
        <description>The average monthly recurring revenue from the asset over its lifetime</description>
        <inlineHelpText>The average monthly recurring revenue from the asset over its lifetime</inlineHelpText>
        <label>Asset MRR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetNumber__c</fullName>
        <description>The asset number</description>
        <externalId>true</externalId>
        <inlineHelpText>The asset number</inlineHelpText>
        <label>Asset Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetStatus__c</fullName>
        <description>The asset status</description>
        <label>Asset Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Activation</fullName>
                </value>
                <value>
                    <fullName>Pending Re-activation</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Pending Renewa</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Change</fullName>
                </value>
                <value>
                    <fullName>Pending Suspension</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Incremented</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetTCV__c</fullName>
        <description>The total contract value of the asset over its lifetime</description>
        <inlineHelpText>The total contract value of the asset over its lifetime</inlineHelpText>
        <label>Asset TCV</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetTxnHistoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset transaction history</description>
        <inlineHelpText>ID of the associated asset transaction history</inlineHelpText>
        <label>Asset Transaction History</label>
        <referenceTo>Apttus_Config2__AssetTransactionHistory__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the asset is set to auto renew</description>
        <inlineHelpText>Indicates whether the asset is set to auto renew</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoRenewalType__c</fullName>
        <description>The auto renewal type</description>
        <inlineHelpText>The auto renewal type</inlineHelpText>
        <label>Auto Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCost__c</fullName>
        <description>The base cost is Cost + Automatic Adjustments for individual products and options</description>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedCost__c</fullName>
        <description>The base extended cost is Quantity X Term (if applicable) X (Base Cost + Cost Adjustment) for individual products and options</description>
        <label>Base Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseExtendedPrice__c</fullName>
        <description>The base extended price is Quantity X Base Price X Term (if applicable) for individual products and options</description>
        <label>Base Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePriceMethod__c</fullName>
        <description>The base price method</description>
        <label>Base Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillThroughDate__c</fullName>
        <description>The last billing period date through which invoice has been generated</description>
        <inlineHelpText>The last billing period date through which invoice has been generated</inlineHelpText>
        <label>Bill Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Line Item History (Bill To)</relationshipLabel>
        <relationshipName>AssetLineItemHistoryBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingEndDate__c</fullName>
        <description>The billing end date. Also known as the last billing period end date.</description>
        <inlineHelpText>The billing end date. Also known as the last billing period end date.</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingFrequency__c</fullName>
        <description>The billing frequency associated with the recurring or usage price</description>
        <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing plan</description>
        <inlineHelpText>ID of the associated billing plan</inlineHelpText>
        <label>Billing Plan</label>
        <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Asset Line Items (History)</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingRule__c</fullName>
        <description>The billing rule associated with the price item</description>
        <inlineHelpText>The billing rule associated with the price item</inlineHelpText>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill In Advance</fullName>
                </value>
                <value>
                    <fullName>Bill In Arrears</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingStartDate__c</fullName>
        <description>The billing start date. Also known as the first billing period end date.</description>
        <inlineHelpText>The billing start date. Also known as the first billing period end date.</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BundeAssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated bundle line item.</description>
        <inlineHelpText>ID of the associated bundle line item.</inlineHelpText>
        <label>Bundle Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItemHistory__c</referenceTo>
        <relationshipLabel>Option Asset Line Items</relationshipLabel>
        <relationshipName>OptionAssetLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessLineItemId__c</fullName>
        <description>Line Item Id  of the business object like agreement line item or proposal line item.</description>
        <inlineHelpText>Line Item Id  of the business object like agreement line item or proposal line item.</inlineHelpText>
        <label>Business Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObjectId__c</fullName>
        <description>ID of the business object associated with the asset line item</description>
        <label>Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObjectType__c</fullName>
        <description>The type of the business object associated with the asset line item</description>
        <label>Business Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CancelledDate__c</fullName>
        <description>The date when the asset line item was cancelled</description>
        <inlineHelpText>The date when the asset line item was cancelled</inlineHelpText>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeType__c</fullName>
        <description>The charge type  associated with the product or service</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>Memo text entered by the user</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaPrice__c</fullName>
        <description>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change to the net price of the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeltaQuantity__c</fullName>
        <description>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</description>
        <inlineHelpText>The change in quantity for the asset due to the latest order. It is positive for increments, negative for decrements and zero when there is no change.</inlineHelpText>
        <label>Delta Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The end date for products and services</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Term X (Base Cost + Cost Adjustment + Option Cost)</description>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedDescription__c</fullName>
        <description>The extended line description</description>
        <label>Extended Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Frequency__c</fullName>
        <description>The pricing frequency associated with the recurring or usage price</description>
        <label>Pricing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the item would be hidden in the invoice display.</description>
        <inlineHelpText>Indicates whether the item would be hidden in the invoice display.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InitialActivationDate__c</fullName>
        <description>The initial activation date from the ready for activation on the first creation order.</description>
        <inlineHelpText>The initial activation date from the ready for activation on the first creation order.</inlineHelpText>
        <label>Initial Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the asset is inactive.</description>
        <inlineHelpText>Indicates whether the asset is inactive.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsOptionRollupLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is an option rollup line</description>
        <label>Is Option Rollup Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the product or option</description>
        <label>Is Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrimaryRampLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</description>
        <inlineHelpText>Indicates whether the line is the primary line for the price ramp. Only applicable when price ramp is in effect for the product or option</inlineHelpText>
        <label>Is Primary Ramp Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the asset line item is modifiable</description>
        <inlineHelpText>Indicates whether the asset line item is modifiable</inlineHelpText>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsRenewalPending__c</fullName>
        <description>Indicates whether renewal is pending for the asset line item</description>
        <formula>Apttus_Config2__NextRenewEndDate__c &gt;= Apttus_Config2__EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether renewal is pending for the asset line item</inlineHelpText>
        <label>Is Renewal Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsRenewed__c</fullName>
        <description>Indicates whether the asset line item is renewed</description>
        <formula>Apttus_Config2__EndDate__c  =  Apttus_Config2__LastRenewEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the asset line item is renewed</inlineHelpText>
        <label>Is Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsUsageTierModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the usage price tier is modifiable for the product or option</description>
        <inlineHelpText>Indicates whether the usage price tier is modifiable for the product or option</inlineHelpText>
        <label>Is Usage Tier Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ItemSequence__c</fullName>
        <description>The sequence of items belonging to a line.</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LastRenewEndDate__c</fullName>
        <description>The last renew end date for the asset line item</description>
        <inlineHelpText>The last renew end date for the asset line item</inlineHelpText>
        <label>Last Renew End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <description>The line number.</description>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <description>The line type.</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/Service</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxUsageQuantity__c</fullName>
        <description>The maximum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The maximum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Max Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinUsageQuantity__c</fullName>
        <description>The minimum usage quantity. Only applicable to usage items.</description>
        <inlineHelpText>The minimum usage quantity. Only applicable to usage items.</inlineHelpText>
        <label>Min Usage Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MustUpgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the product requires upgrade during renewal.</description>
        <inlineHelpText>Whether the product requires upgrade during renewal.</inlineHelpText>
        <label>Must Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetPrice__c</fullName>
        <description>The net price for the product or service is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</description>
        <inlineHelpText>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextRenewEndDate__c</fullName>
        <description>The next renew end date for the asset line item</description>
        <inlineHelpText>The next renew end date for the asset line item</inlineHelpText>
        <label>Next Renew End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionCost__c</fullName>
        <description>The rolled up extended cost of options for the product</description>
        <label>Option Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected option</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Option Asset Line Item History</relationshipLabel>
        <relationshipName>AssetOptionLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionPrice__c</fullName>
        <description>The rolled up adjusted price of options for the product</description>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OriginalStartDate__c</fullName>
        <description>The original start date associated with the asset</description>
        <inlineHelpText>The original start date associated with the asset</inlineHelpText>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the direct parent asset.</description>
        <inlineHelpText>The ID of the direct parent asset.</inlineHelpText>
        <label>Parent Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItemHistory__c</referenceTo>
        <relationshipLabel>Child Asset Line Items</relationshipLabel>
        <relationshipName>ChildAssetLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentBundleNumber__c</fullName>
        <description>Represents the parent bundle number associated with the child bundle</description>
        <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
        <label>Parent Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the line item</description>
        <inlineHelpText>ID of the payment term associated with the line item</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceGroup__c</fullName>
        <description>The price group associated with the product or option</description>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Ramp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>